Configure Tenant Settings

--- a/MultiTenancy/appsettings.json
+++ b/MultiTenancy/appsettings.json
@@ -1,4 +1,30 @@
 {
+  "TenantSettings": {
+    "Defaults": {
+      "DBProvider": "mssql",
+      "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=SharedDb; Trusted_Connection=True"
+    },
+    "Tenants": [
+      {
+        "TId": "bankEl3sema",
+        "Name": "bankEl3sema",
+        "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=BankEl3semaDb; Trusted_Connection=True"
+      },
+      {
+        "TId": "microsoft",
+        "Name": "microsoft",
+        "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=Microsoft; Trusted_Connection=True"
+      },
+      {
+        "TId": "cloudCom",
+        "Name": "cloudCom"
+      },
+      {
+        "TId": "arpuplus",
+        "Name": "arpuplus"
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
