--- a/MultiTenancy/appsettings.json
+++ b/MultiTenancy/appsettings.json
@@ -13,7 +13,7 @@
       {
         "TId": "microsoft",
         "Name": "microsoft",
-        "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=Microsoft; Trusted_Connection=True"
+        "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=MicrosoftDb; Trusted_Connection=True"
       },
       {
         "TId": "cloudCom",
